# pathrs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
assets/shaders/: shader.comp  shader.comp.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: app.rs  assets.rs  config.rs  fps.rs  front.rs  logging.rs  main.rs  tracer.rs
src/back/: mod.rs  pipeline.rs  push_constants.rs  ssbo.rs
src/back/ssbo/: config.rs  mod.rs  objects.rs
src/common/: buffer.rs  capabilities.rs  command_buffer.rs  compatibilities.rs  mod.rs  queue.rs  shader.rs
src/front/: mod.rs
src/front/headless/: front.rs  mod.rs
src/front/windowed/: free_cam.rs  front.rs  mod.rs  pipeline.rs  quad.rs  ui.rs
src/headless/: front.rs  mod.rs
src/tracer/: back.rs  config.rs  debug_messanger.rs  debug_utils.rs  device.rs  front.rs  instance.rs  mod.rs  shader.rs
src/tracer/front/: headless.rs  mod.rs  runtime.rs  windowed.rs
src/vk/: buffer.rs  debug_messanger.rs  debug_messenger.rs  device.rs  instance.rs  mod.rs  quad.rs
src/windowed/: front.rs  mod.rs  runtime.rs  ui.rs
