[package]
name = "pathrs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
build-info-build = "0.0.42"

[dependencies]
ash = "0.38.0"
winit = "0.30.12"
fern = "0.7.1"
log = "0.4.17"
build-info = "0.0.42"
chrono = "0.4.42"
anyhow = "1.0.100"
glam = "0.30.8"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"