[package]
name = "pathrs"
version = "0.1.0"
edition = "2021"
description = "A Vulkan-based path tracing renderer written in Rust."
license = "MIT"

[build-dependencies]
build-info-build = "0.0.42"

[dependencies]
ash = "0.38.0"
winit = "0.30.12"
fern = "0.7.1"
image = { version = "0.25.9", features = ["png"], default-features = false }
log = "0.4.17"
tracing = "0.1.41"
build-info = "0.0.42"
chrono = "0.4.42"
anyhow = "1.0.100"
glam = { version = "0.30.8", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
gpu-allocator = { features = ["visualizer", "std", "vulkan"], version = "0.28.0" }

egui = { version = "0.33.0", features = ["default", "rayon"] }
egui_extras = "0.33.0"
egui-winit = "0.33.0"
egui-ash-renderer = { version = "0.10.0", features = ["gpu-allocator"] }

[patch.crates-io]
gpu-allocator = { git = "https://github.com/Coestaris/gpu-allocator", rev = "3a0b82b072ece0f27abbb7afb84b50a0b5c87598" }

[profile.dev]
opt-level = 1
debug-assertions = true
debug = "full"

[profile.release]
opt-level = "z"
lto = true
debug = "none"
codegen-units = 1
debug-assertions = false
